src/snapshots/parsing/expressions/assoc_greater_chain.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 5 > 4 > 3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - greater_than
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - greater_than
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "5"
                - decimal
          - location:
              line: 1
              column: 5
            kind:
              int_constant:
                - "4"
                - decimal
    - location:
        line: 1
        column: 9
      kind:
        int_constant:
          - "3"
          - decimal
