src/snapshots/parsing/expressions/assoc_le_ge_chain.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 3 <= 3 >= 2
---
location:
  line: 1
  column: 1
kind:
  binary:
    - greater_than_or_equal
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - less_than_or_equal
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "3"
                - decimal
          - location:
              line: 1
              column: 6
            kind:
              int_constant:
                - "3"
                - decimal
    - location:
        line: 1
        column: 11
      kind:
        int_constant:
          - "2"
          - decimal
