src/snapshots/parsing/expressions/assoc_logical_and.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 1 && 1 && 0
---
location:
  line: 1
  column: 1
kind:
  binary:
    - and
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - and
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "1"
                - decimal
          - location:
              line: 1
              column: 6
            kind:
              int_constant:
                - "1"
                - decimal
    - location:
        line: 1
        column: 11
      kind:
        int_constant:
          - "0"
          - decimal
