src/snapshots/parsing/expressions/division_has_higher_precedence_than_addition.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 10+4/2+3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - add
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - add
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "10"
                - decimal
          - location:
              line: 1
              column: 4
            kind:
              binary:
                - divide
                - location:
                    line: 1
                    column: 4
                  kind:
                    int_constant:
                      - "4"
                      - decimal
                - location:
                    line: 1
                    column: 6
                  kind:
                    int_constant:
                      - "2"
                      - decimal
    - location:
        line: 1
        column: 8
      kind:
        int_constant:
          - "3"
          - decimal
