src/snapshots/parsing/expressions/equal.snap
---
source: src/parser.rs
description: parsing expression
expression: actual.unwrap()
info: 5 == 5
---
location:
  line: 1
  column: 1
kind:
  binary:
    - equal
    - location:
        line: 1
        column: 1
      kind:
        int_constant:
          - "5"
          - decimal
    - location:
        line: 1
        column: 6
      kind:
        int_constant:
          - "5"
          - decimal
